# shrocker

./: .gitignore
agent/: .env.example  Cargo.toml  README.md
agent/bot/: Cargo.toml
agent/bot/src/: config.rs  handler.rs  main.rs  register.rs  report.rs
agent/bot/src/cmd/: mod.rs  register.rs
agent/src/: context.rs  lib.rs  main.rs  values.rs
agent/src/cmd_exec/: console.rs  local.rs  mod.rs
agent/src/scenario/: create_user.rs  mod.rs  validate_key.rs
