[package]
name = "shrocker-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
local = []
console = []

[dependencies]
anyhow = "1.0.79"
dotenv = "0.15.0"
gethostname = "0.4.3"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["process"] }
