[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
dotenv = "0.15.0"
indoc = "2.0.4"
serenity = "0.11.7"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
