[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
console = ["shrocker-agent/console"]
local = ["shrocker-agent/local"]

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
clap = { version = "4.4.7", default-features = false, features = ["error-context", "help", "std", "suggestions", "usage", "derive"] }
dotenv = "0.15.0"
indoc = "2.0.4"
shlex = "1.2.0"
shrocker-agent = { path = "../" }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.11.7"
default_features = false
features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "http",
  "model",
  "utils",
  "rustls_backend",
]
